--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-col min-h-screen p-4 gap-4">
-  <app-header></app-header>
-  <main class="flex-1">
+<div class="flex flex-col min-h-screen gap-4">
+  <app-header class="bg-header text-white h-[3.75rem] md:h-20 p-4"></app-header>
+  <main class="flex-1 p-4">
     <router-outlet></router-outlet>
   </main>
-  <app-footer></app-footer>
+  <app-footer class="bg-header text-white h-[3.75rem] md:h-20 p-4"></app-footer>
 </div>
