--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col min-h-screen gap-4">
+<div class="flex flex-col min-h-screen gap-4 max-w-[1200px] mx-auto w-full">
   <app-header class="bg-header text-white h-[3.75rem] md:h-20 p-4"></app-header>
-  <main class="flex-1 p-4">
+  <main class="flex-1 p-4 bg-white">
     <router-outlet></router-outlet>
   </main>
   <app-footer class="bg-header text-white h-[3.75rem] md:h-20 p-4"></app-footer>
