--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,7 @@
   <div class="hidden md:flex justify-between flex-1 items-start">
     <app-navbar class="flex flex-1 justify-center"></app-navbar>
   </div>
-  <a class="hidden md:block link cursor-pointer" routerLink="auth">sign in</a>
+  <a class="hidden md:block link cursor-pointer" routerLink="auth">
+    <img src="/icons/signin.svg" alt="" />
+  </a>
 </div>
