--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,1 +1,7 @@
-<div>logo works!</div>
+<div class="h-[70px] flex items-center">
+  <img
+    src="images/logo.png"
+    alt="logo"
+    class="h-full h-12 w-auto cursor-pointer"
+  />
+</div>
